feat: created rectangle in exercise

--- a/HTML_e_CSS_para_iniciantes/exercicio03/index.html
+++ b/HTML_e_CSS_para_iniciantes/exercicio03/index.html
@@ -28,6 +28,7 @@
 
           </div>
         </div>
+        <div class="rectangle"></div>
         <div class="container">
           <img class="img-bik" src="./img/bicicleta.jpg" alt="bicicleta preta" />
         </div>
