--- a/HTML_e_CSS_para_iniciantes/exercicio03/index.html
+++ b/HTML_e_CSS_para_iniciantes/exercicio03/index.html
@@ -1,75 +1,71 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="./css/style.css">
-      <title>Bikcraft</title>
-    </head>
-    <body>
-      <h1>Bikcraft</h1>
-      <ul class="menu">
-        <li>SOBRE</li>
-        <li>PRODUTOS</li>
-        <li>LOJAS</li>
-        <li>CONTATO</li>
-      </ul>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Bikcraft</title>
+  </head>
+  <body>
+    <h1>Bikcraft</h1>
+    <ul class="menu">
+      <li>SOBRE</li>
+      <li>PRODUTOS</li>
+      <li>LOJAS</li>
+      <li>CONTATO</li>
+    </ul>
 
-      <div class="grid">
-        <div class="container-left bg-white">
-          <h2>Bicicletas Feitas a Mão</h2>
-          <p>
-            A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem
-            equipada com os melhores acessórios da marca
-          </p>
+    <div class="grid">
+      <div class="container-left bg-white">
+        <h2>Bicicletas Feitas a Mão</h2>
+        <p>
+          A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
+          vem equipada com os melhores acessórios da marca
+        </p>
+        <div>
+          <a href="" class="red-btn">VER MAIS</a>
+        </div>
+      </div>
+      <div class="rectangle"></div>
+      <div class="container">
+        <img class="img-bik" src="./img/bicicleta.jpg" alt="bicicleta preta" />
+      </div>
+      <div class="container-left">
+        <p id="benefits">VANTAGENS BIKCRAFT</p>
+      </div>
+      <div class="container bg-white">
+        <div class="benefits">
+          <span>
+            <img src="./img/eletrica.svg" alt="eletrica" />
+          </span>
           <div>
-            <a href="" class="red-btn">VER MAIS</a>
-
+            <h3>Motor Elétrico</h3>
+            <p>Permite você viajar distâncias inimaginaveis com sua bike</p>
           </div>
         </div>
-        <div class="rectangle"></div>
-        <div class="container">
-          <img class="img-bik" src="./img/bicicleta.jpg" alt="bicicleta preta" />
-        </div>
-        <div class="container-left">
-          <p id="benefits">VANTAGENS BIKCRAFT</p>
-        </div>
-        <div class="container bg-white">
-          <div class="benefits">
-            <span>
-              <img src="./img/eletrica.svg" alt="eletrica">
-
-            </span>
-            <div>
-              <h3>Motor Elétrico</h2>
-              <p>Permite você viajar distâncias inimaginaveis com sua bike</p>
-            </div>
+        <div class="benefits">
+          <span>
+            <img src="./img/velocidade.svg" alt="velocidade" />
+          </span>
+          <div>
+            <h3>40 km/h</h3>
+            <p>A mais rápida bicicleta elétrica disponível hoje no mercado</p>
           </div>
-          <div class="benefits">
-            <span>
-              <img src="./img/velocidade.svg" alt="velocidade">
-
-            </span>
-            <div>
-              <h3>40 km/h</h2>
-              <p>A mais rápida bicicleta elétrica disponível hoje no mercado</p>
-            </div>
-          </div>
-          <div class="benefits">
-            <span>
-              <img src="./img/rastreador.svg" alt="rastreador">
-
-            </span>
-            <div>
-              <h3>Rastreador</h3>
-              <p>Rastreador e sistema anti-furto para garantir o seu sossego</p>
-            </div>
+        </div>
+        <div class="benefits">
+          <span>
+            <img src="./img/rastreador.svg" alt="rastreador" />
+          </span>
+          <div>
+            <h3>Rastreador</h3>
+            <p>Rastreador e sistema anti-furto para garantir o seu sossego</p>
           </div>
         </div>
       </div>
-      <footer>Bikcraft. Alguns direitos Reservados</footer>
-      <!-- # Cores
+    </div>
+    <footer>Bikcraft. Alguns direitos Reservados</footer>
+    <!-- # Cores
       cinza-fundo: #f7f7f7
       cinza-texto: #c6c6c6
       vermelho: #ee2211
@@ -83,5 +79,5 @@
       # Tamanhos
 
       conteúdo principal: máximo 1000px -->
-    </body>
-  </html>
+  </body>
+</html>
