--- a/HTML_e_CSS_para_iniciantes/aula/index.html
+++ b/HTML_e_CSS_para_iniciantes/aula/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Menu</title>
+  </head>
+  <body>
+    <h1>Nossos Produtos</h1>
+
+    <ul>
+      <li>Sobre</li>
+      <li>Produtos</li>
+      <li>Contato</li>
+    </ul>
+
+    <p>
+      A Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum vero ex
+      provident, necessitatibus mollitia voluptatibus odio adipisci sint ullam
+      optio in laborum repellat sapiente dignissimos perferendis quae eos
+      voluptas consequatur.
+    </p>
+  </body>
 </html>
