feat: exercise number five, responsive

--- a/HTML_e_CSS_para_iniciantes/aula/index.html
+++ b/HTML_e_CSS_para_iniciantes/aula/index.html
@@ -2,25 +2,27 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css" />
     <title>Menu</title>
   </head>
   <body>
-    <h1>Nossos Produtos</h1>
-
-    <ul>
-      <li>Sobre</li>
-      <li>Produtos</li>
-      <li>Contato</li>
-    </ul>
-
-    <p>
-      A Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum vero ex
-      provident, necessitatibus mollitia voluptatibus odio adipisci sint ullam
-      optio in laborum repellat sapiente dignissimos perferendis quae eos
-      voluptas consequatur.
-    </p>
+    <div class="grid">
+      <div class="cover">
+        <img src="./img/bicicleta.jpg" alt="Bicicleta" />
+      </div>
+      <div class="texto">
+        <p>
+          A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
+          vem equipada com os melhores acessórios, o que garante maior
+          velocidade.
+        </p>
+        <p>
+          A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
+          vem equipada com os melhores acessórios, o que garante maior
+          velocidade.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
