basic redux actions

--- a/Redux-Com-React/redux-basic/index.html
+++ b/Redux-Com-React/redux-basic/index.html
@@ -9,7 +9,10 @@
 
   <body>
     <div>
-      <h1>Olá mundo</h1>
+      <h1>Total: <span id="total"></span></h1>
+      <button id="btn-increment">Incrementar</button>
+      <button id="btn-modal-open">Abrir</button>
+      <button id="btn-modal-close">Fechar</button>
     </div>
 
     <script src="./script.js"></script>
