--- a/Redux-Com-React/redux-basic/index.html
+++ b/Redux-Com-React/redux-basic/index.html
@@ -15,6 +15,8 @@
       <button id="btn-modal-close">Fechar</button>
     </div>
 
+    <a href="pure-function.html">Função pura</a>
+
     <script src="./script.js"></script>
   </body>
 </html>
