--- a/Redux-Com-React/redux-basic/pure-function.html
+++ b/Redux-Com-React/redux-basic/pure-function.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./redux.min.js"></script>
+    <script src="./immer.umd.production.min.js"></script>
 
     <title>Função Pura Redux</title>
   </head>
   <body>
-    <div id="box" style="background: blue; height: 50px;"></div>
-    <a href="/redux-basic">voltar</a>
     <script src="./pureFunction.js"></script>
   </body>
 </html>
